# MarlinRecoMT

./: CMakeLists.txt
doc/: ild-chain-porting.md
source/CaloDigi/include/MarlinRecoMT/: RealisticCaloDigi.h  RealisticCaloReco.h
source/CaloDigi/plugins/: BruteForceEcalGapFiller.cc  RealisticCaloDigiScinPpd.cc  RealisticCaloDigiSilicon.cc  RealisticCaloRecoScinPpd.cc  RealisticCaloRecoSilicon.cc  SimpleCaloDigi.cc  SimpleFcalDigi.cc
source/CaloDigi/src/: RealisticCaloDigi.cc  RealisticCaloReco.cc
source/Overlay/include/MarlinRecoMT/: OverlayFileHandler.h  OverlayMerging.h
source/Overlay/plugins/: OverlayProcessor.cc
source/Overlay/src/: OverlayFileHandler.cc  OverlayMerging.cc
source/TrackDigi/include/MarlinRecoMT/: FixedPadSizeDiskLayout.h  TPCModularEndplate.h  VoxelTPC.h
source/TrackDigi/plugins/: DDPlanarDigiProcessor.cc  DDSpacePointBuilderProcessor.cc
source/TrackDigi/src/: FixedPadSizeDiskLayout.cc  TPCModularEndplate.cc  VoxelTPC.cc
source/Utils/include/MarlinRecoMT/: CalorimeterHitType.h  Circle.h  ErrorOfSigma.h  FastMCParticleType.h  IFourVectorSmearer.h  IRecoParticleFactory.h  LCCylinder.h  LCGeometryTypes.h  LCIOHelper.h  LCLine3D.h  LCPlane3D.h  LCTrajectory.h  SimpleClusterSmearer.h  SimpleHelix.h  SimpleParticleFactory.h  SimpleTrackSmearer.h
source/Utils/plugins/: MergeCollections.cc  SimpleFastMCProcessor.cc  SplitCollectionByLayerProcessor.cc
source/Utils/src/: CalorimeterHitType.cc  Circle.cc  ErrorOfSigma.cc  LCCylinder.cc  LCIOHelper.cc  LCLine3D.cc  LCPlane3D.cc  SimpleClusterSmearer.cc  SimpleHelix.cc  SimpleParticleFactory.cc  SimpleTrackSmearer.cc
steer/: MarlinStdReco.xml  example_calodigi.xml  example_overlay.xml  example_planardigi.xml
